Weight Smoothing Not Working in 2.80 #59500

Closed
opened 2018-12-17 16:50:56 +01:00 by Frederick Burbidge · 5 comments

System Information
Operating system: Windows 10
Graphics card: GTX 1080

Blender Version
Broken: 2.80, 9149e89421, blender2.8, 2018-12-16

Short description of error
The "Smooth" option in the Weights menu during weight painting does not work.

Exact steps for others to reproduce the error
Using the default start-up file, go into weight paint mode and paint some weights across one of the corners of the default cube. You may wish to subdivide the cube if you want more vertices to work with. Enable vertex selection masking (just next to the View menu), tap A to select all vertices on the cube, and then click Weights > Smooth. The weights you have painted should be smoothed out (per the behaviour this function had in 2.79) but instead nothing happens. Additionally, tweaking the tool's values has no effect.

**System Information** Operating system: Windows 10 Graphics card: GTX 1080 **Blender Version** Broken: 2.80, 9149e894210, blender2.8, 2018-12-16 **Short description of error** The "Smooth" option in the Weights menu during weight painting does not work. **Exact steps for others to reproduce the error** Using the default start-up file, go into weight paint mode and paint some weights across one of the corners of the default cube. You may wish to subdivide the cube if you want more vertices to work with. Enable vertex selection masking (just next to the View menu), tap A to select all vertices on the cube, and then click Weights > Smooth. The weights you have painted *should* be smoothed out (per the behaviour this function had in 2.79) but instead nothing happens. Additionally, tweaking the tool's values has no effect.

Added subscriber: @Interference

Added subscriber: @Interference
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-12-18 10:53:14 +01:00
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by bc8f2e9ee4

This issue was referenced by bc8f2e9ee42be09ff196c2e427f52042cff97197
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59500
No description provided.