Fix T59500: Weight Smoothing Not Working

Reviewers: brecht, dfelinto

Maniphest Tasks: T59500

Differential Revision: https://developer.blender.org/D4094